c/examples/writing-a-c-compiler-tests/tests/chapter_12/invalid_lex/invalid_suffix_2.c
int main(void) {
    /* lul is not a valid suffix for integer constants */
    return 0lul;
}